[package]
name = "einsam8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = "0.9.0-beta.1"
sycamore-router = "0.9.0-beta.1"
web-sys = { version = "0.3.64", features = ["InputEvent", "KeyboardEvent", "Location", "Storage"] }

[profile.release]
# Do not perform backtrace for panic on release builds.
panic = 'abort'
# Perform optimizations on all codegen units.
codegen-units = 1
opt-level = 3
lto = true
